@@ -20,11 +20,12 @@
 ---
 
 ## Justification des Flags
-- **-XX:+UseG1GC** : Ce flag utilise le garbage collector G1, optimisé pour réduire les pauses de collecte.
-- **-XX:+UseStringDeduplication** : Ce flag aide à optimiser l'utilisation de la mémoire en dédupliquant les chaînes.
-- **-XX:+AggressiveOpts** : Active les optimisations expérimentales pour améliorer les performances.
-- **-XX:+UnlockDiagnosticVMOptions -XX:+LogCompilation** : Fournit des informations diagnostiques détaillées pour la compilation.
-- **-XX:MaxInlineSize=100** : Contrôle la taille maximale des fonctions inline pour ajuster les performances.
+          - "-XX:+UseG1GC" gestion du garbage collector
+          - "-XX:+PrintGCDetails" diagnostic 
+          - "-XX:MaxHeapSize=512m" gestion de la mémoire
+          - "-XX:+UnlockExperimentalVMOptions" activation de fonctionnalités avancées
+          - "-XX:TieredStopAtLevel=1" Compilation JIT
+
 ---
 
 ## Qualité
